--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lazarus (1.6.0) unstable; urgency=low
+
+  * Snapshot building.
+
+ -- Mattias Gaertner <mattias@freepascal.org>  Sat, 5 Dec 2015 19:32:35 +0100
+
 lazarus (1.5.0) unstable; urgency=low
 
   * Snapshot building.
