Translations: Hungarian translation update by Péter Gábor, bug 30919
 SVN 53357@branches/fixes_1_6

--- a/components/ideintf/languages/objinspstrconsts.hu.po
+++ b/components/ideintf/languages/objinspstrconsts.hu.po
@@ -317,7 +317,7 @@ msgstr "Mozgatás eggyel jobbra"
 
 #: objinspstrconsts.nbcesshowpage
 msgid "Show Page"
-msgstr "Oldal megjelenítése"
+msgstr "Lap megjelenítése"
 
 #: objinspstrconsts.oicoleditadd
 msgctxt "objinspstrconsts.oicoleditadd"
