--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lazarus (1.6.4) stable; urgency=low
+
+  * Snapshot building.
+
+ -- Mattias Gaertner <mattias@freepascal.org>  Sun, 26 Feb 201 00:04:12 +0200
+
 lazarus (1.6.2) stable; urgency=low
 
   * Snapshot building.
